--- a/.target/views/main.scala.html
+++ b/.target/views/main.scala.html
@@ -5,19 +5,17 @@
 <html>
     <head>
         <title>@title</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
+        
     </head>
     <body>
     	<!-- Barra -->
     	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
-            	<a href="#">
-            	<img src=@routes.Assets.at("images/metas.png") alt="" style="margin-left: -20%; margin-bottom: -86px; margin-top: 15px; float: left;"></img>
-                <img class="imagefloat" src=@routes.Assets.at("images/logo.png") alt="" style="float: left;  margin-top: 3px; margin-left: -38px;">
-          		</a>
+            	<img class="imagefloat" src=@routes.Assets.at("images/logo.png") alt="" style="float: left;  margin-top: 3px; margin-left: -38px;">
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -25,12 +23,16 @@
             	  <ul class="nav navbar-nav">
             	  	<li><a
 						href="/eventos"
-						target="_blank">Eventos</a>
+						>Eventos</a>
+					</li>
+					<li><a
+						href="/temas"
+						>Temas</a>
 					</li>
             	  	
             		<li><a
 						href="/listaParticipantes"
-						target="_blank">Participantes</a>
+						>Participantes</a>
 					</li>
 
                 </ul>
