cadastramento de eventos, temas e participantes

--- a/app/views/eventos.scala.html
+++ b/app/views/eventos.scala.html
@@ -7,7 +7,17 @@
 	<head>
 		 <meta charset="UTF-8">
 		 <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.min.css")">
+			
+		 <style>
+    		body {
+       			background-image: url(./assets/images/bg.png); 
+		
+    		}
+    	</style>
+	
 	</head>
+	
+	
 	
 	<body>
 	
@@ -30,7 +40,7 @@
 	<!--  Conteudo Central -->
 		<div class="col-md-6" style="width: 1000px">
 		
-			<div class="panel panel-primary" style=" width: 800px; margin-left: 250px; margin-right:50px ;margin-top: 60px;">
+			<div class="panel panel-primary" style=" width: 800px; margin-left: 250px; margin-right:50px ;margin-top: 80px;">
   				<div class="panel-heading" style="background-color: #4c4c4c">Insira as infromaçoes abaixo para cadastrar um evento no Hackfest</div>
   					<div class="panel-body">
 
