--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -3,23 +3,30 @@
 
 
 @main("Hackfests"){	
+
+
 @if(eventos.isEmpty()){
 
-		<div class = "content" >
-		<img src=@routes.Assets.at("images/tag-cloud.png") alt="" style="margin-left: 20%; margin-top: 15px; "></img>
-		</div>
-	}	else{		
+	<div class = "content" >
+		<img src=@routes.Assets.at("images/tag-cloud.png") alt="" style="margin-left: 20%; margin-top: 15%;; "></img>
+	</div>
+	
+	}	else{
+	
+	
+	
+	<div class = "content" style="margin-top: 10%;  margin-left:15%;" >		
 
 	@for(evento <- eventos){
-		<div class="panel panel-primary" style=" width: 80%; margin-right:50px ;margin-top: 60px;">
-		<div class="panel-heading" style=" background-color: #4c4c4c;" >  @evento.getNome()
-		<form action="/inscricao" method="post" style="float: right;">
+		<div class="panel panel-primary" style=" width: 70%; ; margin-top: 25px;">
+		<div class="panel-heading" style=" background-color: #4c4c4c;" > Evento: @evento.getNome()
+		<form action="@routes.Application.inscricao()" method="get"  style="float: right;">
 		
-			<button class='btn btn-xs btn-info' type="submit" id="@evento.getId()" name="ID" value="@evento.getId()">Increva-se</button>
-			</a>
+			<button class='btn btn-xs btn-info' type="submit" id="@evento.getId()" name="ID_EVENTO" value="@evento.getId()">Increva-se</button>
+		
 		</form>	
 		<form action="/informacoes" method="post" style="float: right;">
-			<button class='btn btn-xs btn-info' type="submit" id="@evento.getId()" name="ID" value="@evento.getId()" style="margin-left: 10px;">Informações</button>
+			<button class='btn btn-xs btn-info' type="submit" id="@evento.getId()" name="ID" value="@evento.getId()" style="margin-right: 20px;">Informações</button>
 		</form>	
 		</div>
 		
@@ -27,31 +34,30 @@
 		
 		<div class="panel-body">
 		<table class="table table-hover table-condensed">
+				
+				
 		
-				<thead>
+				<thead style="background-color: #a2a1a1">
 					<tr align="center">
-						<th width="120">Não há temas cadastrados</th>
+						<th width="120" style="background-color: #4c4c4c; color: #fff">Temas</th>
 		            </tr>
 				</thead>
 				<tbody>
 					@for(tema <- evento.getTemas()){
 						<tr class="success">
-						<td width="150">@tema.getNome()</td>
+						<td width="150" style="color: #000; background-color: #cbcaca">@tema.getNome()</td>
 						</tr>
 					}
 				</tbody>
-					<thead>
-					<tr align="center">
-						<th width="120" >Total de inscritos: @evento.getParticipantes().size()</th>
-		            </tr>
-					</thead>
 					
+				
 			</table>
+				<div class="panel-heading" style="width:104%; margin-bottom:-15px; margin-left:-15px; background-color: #4c4c4c; color: #fff" > Total de inscritos: @evento.getParticipantes().size()</div>
 			</div>		
 	</div>
-	
-	
-	
-	}			
 	}
+	</div>
+			
+	}
+	
 }
