--- a/app/views/listaParticipantes.scala.html
+++ b/app/views/listaParticipantes.scala.html
@@ -1,19 +1,51 @@
-@(eventos: List[models.Evento])
+@(id: Long, evento: models.Evento)
 
 @import helper._
 
 
+<html>
 
-	
-		<div class="panel panel-primary">
-		<div class="panel-heading">Incritos</div>
+	<head>
+		 <meta charset="UTF-8">
+		 <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.min.css")">
+		 
+		 <style>
+    		body {
+       			background-image: url(./assets/images/bg.png); 
 		
-		<div class="panel-body">
+    		}
+    	</style>
+    	
+	</head>
+	
+	<body>
+	
+	<!-- Barra -->
+    	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+            	<a href="#">
+                <img class="imagefloat" src=@routes.Assets.at("images/logo.png") alt="" style="float: left;  margin-top: 3px; margin-left: -38px;">
+          		</a>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+	
+		
+	<br><br>
+
+	<!--  Conteudo Central -->
+		<div class="col-md-6" style="width: 1000px">
+		
+			<div class="panel panel-primary" style=" width: 80%; margin-left: 250px; margin-right:50px ;margin-top: 80px;">
+  				<div class="panel-heading" style="background-color: #4c4c4c">Inscritos</div>
+  					<div class="panel-body">
 			<table class="table table-hover table-condensed">
 				<thead>
 					<tr align="center">
 						<th width="150" >Data</th>
-						
 						<th width="250" >Nome</th>
 						<th width="250" >E-mail</th>
 						<th width="150" >Evento</th>
@@ -21,7 +53,7 @@
 		            </tr>
 				</thead>
 				<tbody>
-				@for(evento <- eventos){
+		
 					@for(participante <- evento.getParticipantes){
 					
 						<tr class="success">
@@ -34,10 +66,11 @@
 							
 						</tr>
 					}
-					}
+					
 				</tbody>
 			</table>
 		</div>
 	</div>
 	
-	
+	</body>
+	</html>
