--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -5,9 +5,18 @@
 <html>
     <head>
         <title>@title</title>
+        <meta charset="UTF-8">
+        
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
+        
+        <style>
+    		body {
+       			background-image: url(./assets/images/bg.png); 
+		
+    		}
+    	</style>
         
     </head>
     <body>
@@ -20,21 +29,16 @@
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-ex1-collapse" style="float: right;" >
-            	  <ul class="nav navbar-nav">
-            	  	<li><a
-						href="/eventos"
-						>Eventos</a>
-					</li>
-					<li><a
-						href="/temas"
-						>Temas</a>
-					</li>
-            	  	
-            		<li><a
-						href="/listaParticipantes"
-						>Participantes</a>
-					</li>
-
+            	  <ul class="nav navbar-nav" style="margin-top: 10px;">
+            	  
+					
+                         
+                            <li ><a href="/eventos" >Cadastrar evento</a>
+                            </li>
+                            <li><a href="/temas">Cadastrar tema</a>
+                            </li>
+                            
+                       
                 </ul>
                 
             </div>
