ajustes de interface

--- a/app/views/listaParticipantes.scala.html
+++ b/app/views/listaParticipantes.scala.html
@@ -12,7 +12,8 @@
 		 <style>
     		body {
        			background-image: url(./assets/images/bg.png); 
-		
+				background-repeat: no-repeat;
+				background-attachment: fixed;
     		}
     	</style>
     	
