--- a/app/views/eventos.scala.html
+++ b/app/views/eventos.scala.html
@@ -11,7 +11,8 @@
 		 <style>
     		body {
        			background-image: url(./assets/images/bg.png); 
-		
+				background-repeat: no-repeat;
+				background-attachment: fixed;
     		}
     	</style>
 	
