--- a/app/views/inscricao.scala.html
+++ b/app/views/inscricao.scala.html
@@ -13,7 +13,8 @@
 	<style>
     		body {
        			background-image: url(./assets/images/bg.png); 
-		
+				background-repeat: no-repeat;
+				background-attachment: fixed;
     		}
     	</style>
 	
