--- a/app/views/temas.scala.html
+++ b/app/views/temas.scala.html
@@ -8,7 +8,8 @@
 		 <style>
     		body {
        			background-image: url(./assets/images/bg.png); 
-		
+				background-repeat: no-repeat;
+				background-attachment: fixed;
     		}
     	</style>
 	</head>
